# applications_on_qline

./: LICENSE  README.md
Q_digital_signatures/: Alice.py  Bob.py  Charlie.py  LICENSE  async_communication.py  client_run.py  handler.py  m0.txt  qds.py  qkd.py  readerA.py  readerA_sq.py  readerB.py  readerB_sq.py  server_run.py  start_stop.py  utils.py
Q_digital_signatures/config/: filepath_alice.json  network.json
Q_digital_signatures/config_test/: readme.md
Q_digital_signatures/config_test/gen_config/: Cargo.toml  README.md  meta_config_for_real.json  meta_config_for_sim.json  sim_config.json
Q_digital_signatures/config_test/gen_config/src/: config.rs  lib.rs  main.rs
Q_digital_signatures/config_test/qline1/: meta_config.json  ports_for_localhost.json
Q_digital_signatures/extractable_equivocal_commitment/: README.md  c.py  eec.py  handler.py
Q_oblivious_transfer/: LICENSE  README.md  async_communication.py  client_run.py  handler.py  m1.txt  readerA_sq.py  readerB_sq.py  server_run.py  utils.py
Q_oblivious_transfer/codes_ldpc/: convert2_mtx.jl  readme.md
Q_oblivious_transfer/config/: filepath_bob.json
Q_oblivious_transfer/extractable_equivocal_commitment/: s.py
Qtoken_Qline/: LICENSE  README.md  requirements.txt  run_alice.py  run_alice_agent.py  run_bob.py  run_bob_agent.py  setup.py
Qtoken_Qline/config/: __init__.py  defaults.py
Qtoken_Qline/scripts/: cleanup.sh  launch_simulation.sh  run_test.sh  test_protocol_no_hw.sh  test_protocol_w_hw.sh
Qtoken_Qline/src/: __init__.py
Qtoken_Qline/tests/: test_imports.py
(+23 files in other folders)
